--- a/config/remote.conf
+++ b/config/remote.conf
@@ -1,11 +1,11 @@
-#!name=SR-ALL-FILES-PROXY Base Config
-#!desc=Конфигурация с DoH, hijack-dns, автообновлением списков и моим VoIP-листом.
+#!name=SR Base (all from my repo)
+#!desc=DoH + hijack-dns + все списки через мой репозиторий (jsDelivr).
 
 [General]
-# Автообновление этого конфига (RAW-ссылка на этот файл в твоём репо):
+# Обновление самого конфига (RAW на ЭТОТ файл в твоём репо):
 update-url = https://raw.githubusercontent.com/Alexgood321/SR-ALL-FILES-PROXY/main/config/remote.conf
 
-# Системные обходы и исключения для TUN
+# Системные обходы / исключения TUN
 bypass-system = true
 skip-proxy = 127.0.0.1, localhost, *.local, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
 tun-excluded-routes = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
@@ -13,37 +13,35 @@ tun-excluded-routes = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16
 # Сеть
 ipv6 = false
 
-# DNS hijack (перехват DNS-запросов и отправка их через прокси)
+# Перехват DNS (локальный Do53 через прокси)
 hijack-dns = 1.1.1.1:53,8.8.8.8:53,8.8.4.4:53,9.9.9.9:53,94.140.14.14:53,208.67.222.222:53,1.0.0.1:53
 
 [DNS]
 # Основные DoH-сервера
 server = https://dns.cloudflare.com/dns-query
 server = https://dns.google/dns-query
-
-# Фоллбэк обычные DNS
+# Фоллбэк Do53
 dns-server = 1.1.1.1,8.8.8.8
 
 [Host]
-# Переопределений нет (можно добавить при необходимости)
+# (пусто)
 
 [Proxy Group]
-# Группа прокси для правил (выбираешь руками в UI)
+# Выбери руками активный узел в UI
 PROXY = select, DIRECT
 
 [Rule]
-# --- Мой VoIP-лист (из SR-ALL-FILES-PROXY, jsDelivr, автообновление раз в сутки) ---
-RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/voip-pack.list,PROXY,update-interval=60
+# --- Твой VoIP-список (твоя копия в репо) ---
+RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/voip-pack.list,PROXY,update-interval=21600
 
-# --- Остальные списки ---
-RULE-SET,https://raw.githubusercontent.com/misha-tgshv/shadowrocket-configuration-file/main/rules/domains_antifilter.list,PROXY,update-interval=14400
-RULE-SET,https://raw.githubusercontent.com/misha-tgshv/shadowrocket-configuration-file/main/proxy.list,PROXY,update-interval=14400
-RULE-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-easylist.txt,REJECT,update-interval=14400
+# --- Зеркала внешних списков (через твой репозиторий) ---
+RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/upstreams/domains_antifilter.list,PROXY,update-interval=21600
+RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/upstreams/proxy.list,PROXY,update-interval=21600
+RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/upstreams/anti-ad-easylist.list,REJECT,update-interval=21600
 
 # --- Гео и финальное правило ---
 GEOIP,RU,DIRECT
 FINAL,DIRECT
 
 [URL Rewrite]
-# Редирект Яндекса на ya.ru
 ^http://(www\.)?yandex\.ru https://www.ya.ru 302
