--- a/config/remote.conf
+++ b/config/remote.conf
@@ -1,4 +1,3 @@
-# last_update=2025-08-15_13:51:10_UTC
 #!name=SR Base (mirrored via my repo)
 #!desc=DoH + hijack-dns + RULE-SET с моего репозитория (jsDelivr).
 
@@ -9,6 +8,8 @@ skip-proxy = 127.0.0.1, localhost, *.local, 192.168.0.0/16, 10.0.0.0/8, 172.16.0
 tun-excluded-routes = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 ipv6 = false
 hijack-dns = 1.1.1.1:53,8.8.8.8:53,8.8.4.4:53,9.9.9.9:53,94.140.14.14:53,208.67.222.222:53,1.0.0.1:53
+# (опц.) запрет отката к системному DNS — если поддерживается твоей версией:
+# dns-fallback-system = false
 
 [DNS]
 server = https://dns.cloudflare.com/dns-query
@@ -18,19 +19,25 @@ dns-server = 1.1.1.1,8.8.8.8
 [Host]
 
 [Proxy Group]
+# В UI выбери рабочий узел для группы PROXY
 PROXY = select, DIRECT
 
 [Rule]
-# мой VoIP-пак
+# 1) Фикс: форсим grok через прокси в любом случае
+DOMAIN-KEYWORD,grok,PROXY
+
+# 2) Твой список (через jsDelivr, кэш чистится экшеном)
 RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/voip-pack.list,PROXY,update-interval=120
 
-# зеркала апстримов (появятся/обновятся после успешного mirror)
+# 3) Зеркала апстримов (из твоего репо)
 RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/upstreams/domains_antifilter.list,PROXY,update-interval=21600
 RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/upstreams/proxy.list,PROXY,update-interval=21600
 RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/upstreams/anti-ad-easylist.list,REJECT,update-interval=21600
 
+# 4) Остальное — по месту
 GEOIP,RU,DIRECT
 FINAL,DIRECT
 
 [URL Rewrite]
+# Редирект Яндекса (экранируем точки, без лишних пробелов)
 ^http://(www\.)?yandex\.ru https://www.ya.ru 302
