--- a/config/remote.conf
+++ b/config/remote.conf
@@ -11,6 +11,11 @@ ipv6 = false
 hijack-dns = 1.1.1.1:53,8.8.8.8:53,8.8.4.4:53,9.9.9.9:53,94.140.14.14:53,208.67.222.222:53,1.0.0.1:53
 dns-server = 1.1.1.1,8.8.8.8
 
+[Host]
+# Жёсткая привязка домена к IP (перекрывает DNS)
+localhost = 127.0.0.1
+cdn.den33tpanel.online = 5.61.88.118
+
 [Rule]
 # Твой VoIP-пак
 RULE-SET,https://cdn.jsdelivr.net/gh/Alexgood321/SR-ALL-FILES-PROXY@main/rules/voip-pack.list,PROXY,update-interval=120
