--- a/config/remote.conf
+++ b/config/remote.conf
@@ -5,7 +5,7 @@
 [General]
 update-url = https://raw.githubusercontent.com/Alexgood321/SR-ALL-FILES-PROXY/main/config/remote.conf
 bypass-system = true
-skip-proxy = 127.0.0.1, localhost, *.local, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
+skip-proxy = 127.0.0.1, localhost, *.local, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, cdn.den33tpanel.online
 tun-excluded-routes = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 ipv6 = false
 hijack-dns = 1.1.1.1:53,8.8.8.8:53,8.8.4.4:53,9.9.9.9:53,94.140.14.14:53,208.67.222.222:53,1.0.0.1:53
@@ -14,7 +14,6 @@ dns-server = 1.1.1.1,8.8.8.8
 [Host]
 # Жёсткая привязка домена к IP (перекрывает DNS)
 localhost = 127.0.0.1
-cdn.den33tpanel.online = 5.61.88.118
 
 [Rule]
 # Твой VoIP-пак
